--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 			<version>1.9.3.kotlin12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.spockframework</groupId>
+			<artifactId>spock-core</artifactId>
+			<version>1.3-groovy-2.5</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
